--- a/src/WowTable/WowTable.css
+++ b/src/WowTable/WowTable.css
@@ -1,4 +1,6 @@
-
+.wowtable{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .container {
     text-align: center;
     display: table;
@@ -17,7 +19,6 @@
     margin: 5px;
 }
 .talent .tooltiptext {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     visibility: hidden;
     width: 120px;
     background-color: black;
@@ -59,3 +60,9 @@
     background-color: rgb(7, 8, 10);
 }
 */
+
+.buttonPanel {
+    display: flex;
+    justify-content: space-between;
+    
+}
