--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,31 @@
 .App{
-    align-self: center;
+         position: absolute;
+    
+        top: 35%;
+        display: flex;
+        flex-direction: row;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        z-index: -1;
+}
+
+.infoPanel{
+    width: 250px;
+    height:600px;
+    background-color: black;
+    color: white;
+    z-index: -1;
+    text-align: center;
+    padding: 2.5px;
+}
+
+.mainContent{
+    margin-left: 20px;
+    margin-right:20px;
+    
+    z-index: 1;
+  
 }
 
 .theMenuBar {
