--- a/src/Menu/MenuMainElement.css
+++ b/src/Menu/MenuMainElement.css
@@ -1,19 +1,27 @@
 .mydiv {
   display: flex;
   flex-direction: row;
-  height: 20px;
-  width: 150px;
-  
+  height: 30px;
+  overflow: visible;
+    
 }
 
+.forcegrid{
+  width: 100%;
+}
 
-#mainaccordionbutton{
+.sublists {
+  padding-top: 12.5px;
+}
 
+.mainaccordionbutton{
   color: green;
-  width: 150px;
-  text-align: center;
-  height:45px;
   background-color: black;
+  text-align: center;
+  border: darkgrey;
+  border-style: solid;
+  height: 30px;
+  width: 250px;
   word-wrap: break-word;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -21,14 +29,14 @@
 .accordion {
   font-size:small;
   /* color: #f2f2f2; */
- 
+  width: 200px;
+  color: green;
   background-color: black;
-  border: #ddd;
+  border: darkgrey;
+  border-style: solid;
   outline: none;
   text-align: left;
-  height: 20px;
-  width: 150px;
-  cursor: pointer;
+  height: 30px;  
   transition: background-color 0.2s linear;
  
   
@@ -36,12 +44,47 @@
 .accordion:hover {
   background-color:  rgb(66, 65, 65);
 }
-.accordion-content {
+/* .accordion-content {
   font-size:small;
   color: green;
   background-color: black;
+  width:50px;
+  text-align: left;
+  overflow: hidden;
+  position: relative;
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1;
+  margin: 0;
   
+ 
+}
+.accordion-content-item {
+/*   display: flex;
+  flex-direction: row; 
+  font-size:small;
+  text-decoration: none;
+  cursor: pointer;
+  
+}
+.accordion-content-item a {
+text-decoration: none;
+  display: block;
+  transition: background-color 0.2s linear;
+}
+.accordion-content-item:hover {
+ background-color:  rgb(66, 65, 65);
+ cursor: pointer;
+ 
+} 
+ */
 
+ .accordion-content {
+  font-size:small;
+  color: green;
+  background-color: black;
+  border: darkgrey;
+  border-style: solid;
   padding: 5px; 
   overflow: hidden;
   position: relative;
