--- a/src/WowTable/WowTable.css
+++ b/src/WowTable/WowTable.css
@@ -1,16 +1,26 @@
 .wowtable{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 1000px;
+
 }
 .container {
     text-align: center;
     display: table;
     color: #fff;
 }
-.container td,th {
-    width: 160px;
-    height: 40px;
-  
+
+.widerColumn{
+    width: 250px;
+    height:20px;
 }
+
+.container td,th {
+    width: 100px;
+    height: 20px;
+}
+
+
+
 .tiny-icon {
     display: block;
     width: 32px;
@@ -66,3 +76,28 @@
     justify-content: space-between;
     
 }
+
+.placeholderSpan{
+    color: #555555;
+    font-size: 14px;
+    font-family: verdana,arial,sans-serif;
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer */
+ -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
+-webkit-user-select: none; /* Chrome, Safari, and Opera */
+-webkit-touch-callout: none; /* Disable Android and iOS callouts*/
+}
+
+.activeSpan{
+    color: #000000;
+    cursor: pointer;
+    text-decoration: underline;
+    font-size: 14px;
+    font-family: verdana,arial,sans-serif;
+         -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer */
+   -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
+  -webkit-user-select: none; /* Chrome, Safari, and Opera */
+  -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
+}
+
