--- a/src/WowTable/WowTableRow.css
+++ b/src/WowTable/WowTableRow.css
@@ -4,3 +4,22 @@
     justify-content: space-around;
    
 }
+i {
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    
+  }
+
+.up {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+    margin-top: 4px;
+  }
+  
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    margin-bottom: 4px;
+  }
