talent analysis, css updates

--- a/src/InfoPanel/InfoPanel.css
+++ b/src/InfoPanel/InfoPanel.css
@@ -1,9 +1,14 @@
 .infoPanel{
     width: 350px;
     height:600px;
-    background-color: black;
-    color: white;
+    border-style: solid;
+    border: darkgrey;
+    color: black;
+    
     z-index: -1;
     text-align: center;
     padding: 2.5px;
 }
+
+
+  
