--- a/src/WowTable/WowTableRow.css
+++ b/src/WowTable/WowTableRow.css
@@ -4,13 +4,17 @@
     justify-content: space-around;
    
 }
+
+
 i {
-    border: solid white;
+    border: solid black;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 3px;
     
   }
+
+
 
 .up {
     transform: rotate(-135deg);
